# terminal-fun

./: LICENSE  README.md  pyproject.toml
src/reqcraft/: __init__.py  __main__.py  app.py  config.py  curl_parser.py  http_client.py  models.py  storage.py
src/reqcraft/styles/: app.tcss
src/reqcraft/widgets/: __init__.py  environment_modal.py  request_panel.py  response_panel.py  sidebar.py  url_bar.py
tests/: test_curl_parser.py  test_http_client.py  test_models.py  test_storage.py
