[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reqcraft"
version = "0.1.0"
description = "An interactive API testing client for the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ReqCraft Contributors" },
]
keywords = ["terminal", "api", "http", "tui", "testing", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "textual>=0.50.0",
    "httpx>=0.27.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
reqcraft = "reqcraft.__main__:main"

[project.urls]
Homepage = "https://github.com/terminal-fun/reqcraft"
Repository = "https://github.com/terminal-fun/reqcraft"
Issues = "https://github.com/terminal-fun/reqcraft/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/reqcraft"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
